traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getDirection()==Direction.EST&&estFaceMur) {
    ^