traversal.snake.Snake.scala.code
override def run() {
  
  //METHODE FIN
  def posfin():Boolean = {
    if (getDirection()==Direction.EST&&estFaceMur) {
      gauche(); 
      if (estFaceMur) {
        droite();
        return true
      }
    droite()
    return false
    }
  }
  
  //METHODE AVANCE
  def avanserp() {
    while (!estFaceMur) {
      avance()
    }
    gauche();avance();gauche()
   while (!estFaceMur) {
      avance()
   }
    droite();avance();droite()
  }

while (posfin()) {
  avanserp()
}
  
}